# rust-scripts

./: Cargo.toml  README.md
src/: flux.rs  main.rs
