[package]
name = "rust-scripts"
version = "0.2.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
## CLI
clap = { version = "3.2", features = ["derive", "cargo", "wrap_help", "env"] }

## Parsing yaml
serde = { version = "1.0", features = ["derive"] }
serde_yaml = { version = "0.8" }
serde-query = { version = "0.1" }

## Files
glob = "0.3.0"
termtree = "0.4.0"
clap_complete = "3.2.3"
